--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("/img/main-background.webp");
+  background-image: url("img/main-background.webp");
   background-repeat: no-repeat;
   background-size: cover;
 }
